Change homepage and contact page hero image container width from 100vw to 100% to fix horizontal alignment for screens greater than or equal to 560px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -504,7 +504,7 @@ input[type="email"],
         aspect-ratio: 3/1;
         background: #000 url('../images/hero-image.webp') center center/cover no-repeat;
         margin-top: 0;
-        min-width: 100vw;
+        min-width: 100%;
         position: absolute;
     }
     
